Fixing pages overflow

--- a/src/pages/contact/styles.css
+++ b/src/pages/contact/styles.css
@@ -203,180 +203,3 @@
         margin: 0 20vw 3rem 20vw;
     }
 }
-/* .container-purchase {
-    margin: auto;
-    width: 100%;
-    width: 100vw;
-    display: grid;
-    grid-template-areas:
-        'logo'
-        'plant'
-        'form';
-}
-
-.logo{
-    grid-area: logo;
-}
-
-.plant{
-    grid-area: plant;
-    padding: 10vw;
-}
-
-.plant h1{
-    padding: 0;
-    font-size: 2.5rem;
-    line-height: 3.3rem;
-}
-
-.plant h2{
-    color: #d6d6d6;
-    font-size: 2rem;
-    font-weight: 500;
-}
-
-.plant img{
-    max-width: 25rem;
-}
-
-.form{
-    grid-area: form;
-    background-color: #f2f2f2;
-    padding:0;
-    padding-bottom: 3rem;
-}
-
-.form h1{
-    font-size: 2rem;
-    padding: 0;
-}
-
-.icon-purchase{
-    width: 100%;
-    color: #6E6E6E;
-    display: flex;
-    align-items: center;
-    margin: .5em;
-}
-
-.icon-purchase .iconPlantList{
-    margin-right: .3em;
-}
-
-.form .description{
-    color: #6E6E6E;
-    font-size: 1.1rem;
-    line-height: 1.6rem;
-    text-align: start ;
-}
-
-.form .inputs{
-    margin-top: 1rem;
-}
-.form input{
-    width: 70vw;
-    padding: 3vw 5vw;
-    border-radius:10rem;
-    margin-bottom: 1rem;
-    outline: none;
-}
-
-.form label{
-    font-weight: 700;
-    color: #6E6E6E;
-    padding: 5vw;
-    margin-bottom: 1rem;
-}
-
-.form button{
-    width:90vw;
-}
-
-@media (min-width:801px){
-    .container-purchase {
-        width:100vw;
-        display: grid;
-        grid-template-areas:'logo plant form empty';
-    }
-    
-    .empty {
-        grid-area: empty;
-        width: 20vw;
-        min-width: 3rem;
-        max-width: 10vw;
-    }
-    
-    .logo-purchase{
-        transform: rotate(-90deg);
-        padding: 0;
-        margin: auto;
-        margin-top: 10rem;
-        width: 20vw;
-        min-width: 8rem;
-        max-width: 10vw;
-    }
-
-        
-    .plant{
-        grid-area: plant;
-        padding: 0 0.5rem 0 5rem;
-        margin-top: 5rem;
-        min-width: 20rem;
-    }
-
-    .plant img{
-        max-width: 15rem;
-    }
-    
-    .form{
-        padding:3rem;
-        width: 20rem;
-        min-width: 20vw;
-        margin-top: 5rem;
-    }
-     
-    .form h1{
-        padding:0;
-    }
-
-    .form .description{
-        padding:1rem 3rem 1rem 0;
-    }
-
-    .form .inputs{
-        padding:0;
-    }
-
-    .form input{
-        margin-bottom: 0;
-    }
-    .form label{
-        padding: 0;
-    }
-
-    .form input[type=submit]{
-        margin-top: 1rem;
-        width:10rem;
-        float: right;
-        padding:1.3rem;
-        background-color: #fff;
-        color: #15573F;
-        border: 1px solid #15573F;
-        outline: none;
-    }
-    .form input[type=submit]:hover{
-        margin-top: 1rem;
-        width:10rem;
-        float: right;
-        padding:1.3rem;
-        background-color: #15573F;
-        color: #fff;
-        cursor: pointer;
-    }
-    
-    .form input{
-        width: 80%;
-        padding: 1em 2rem;
-    }
-
-} */
